--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -221,7 +221,7 @@ new users may find this a helpful resource.
 .P
 .B
 sbotools
-prints some messages and prompts in color by default. All scripts except for
+can be set up to print some messages and prompts in color. All scripts except for
 .B
 sboconfig
 have
@@ -230,10 +230,10 @@ have
 and
 .B
 --nocolor
-options to turn colors on and off. To turn all colors off by default
+options to turn colors on and off. To turn all colors on by default,
 set
 .B
-NOCOLOR
+COLOR
 to
 .B
 TRUE\fR\
