--- a/man5/sbotools.colors.5
+++ b/man5/sbotools.colors.5
@@ -14,12 +14,12 @@ The
 file allows for customizing
 .B
 sbotools
-output colors. To disable all
+output colors. To enable
 .B
 sbotools
 color output, set
 .B
-NOCOLOR
+COLOR
 to
 .B
 TRUE\fR\
