--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Prickle-Prickle, Confusion 58, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Util 3 "Pungenday, Confusion 62, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -75,6 +75,10 @@ SBO::Lib::Util \- Utility functions for SBO::Lib and the sbotools
 .Ve
 .SH VARIABLES
 .IX Header "VARIABLES"
+.ie n .SS $arch
+.el .SS \f(CW$arch\fP
+.IX Subsection "$arch"
+The kernel architecture, accounting for \f(CW\*(C`i?86\*(C'\fR userlands reporting a \f(CW\*(C`x86_64\*(C'\fR kernel.
 .ie n .SS "($color_default, $color_lesser, $color_notice, $color_warn)"
 .el .SS "($color_default, \f(CW$color_lesser\fP, \f(CW$color_notice\fP, \f(CW$color_warn\fP)"
 .IX Subsection "($color_default, $color_lesser, $color_notice, $color_warn)"
@@ -104,7 +108,7 @@ they change according to the configuration. \f(CW\*(C`SBO_HOME\*(C'\fR is change
 The supported keys are: \f(CW\*(C`NOCLEAN\*(C'\fR, \f(CW\*(C`DISTCLEAN\*(C'\fR, \f(CW\*(C`JOBS\*(C'\fR, \f(CW\*(C`PKG_DIR\*(C'\fR,
 \&\f(CW\*(C`SBO_HOME\*(C'\fR, \f(CW\*(C`LOCAL_OVERRIDES\*(C'\fR, \f(CW\*(C`SLACKWARE_VERSION\*(C'\fR, \f(CW\*(C`REPO\*(C'\fR, \f(CW\*(C`BUILD_IGNORE\*(C'\fR,
 \&\f(CW\*(C`GPG_VERIFY\*(C'\fR, \f(CW\*(C`RSYNC_DEFAULT\*(C'\fR, \f(CW\*(C`STRICT_UPGRADES\*(C'\fR, \f(CW\*(C`GIT_BRANCH\*(C'\fR, \f(CW\*(C`CLASSIC\*(C'\fR,
-\&\f(CW\*(C`CPAN_IGNORE\*(C'\fR, \f(CW\*(C`ETC_PROFILE\*(C'\fR, \f(CW\*(C`LOG_DIR\*(C'\fR, \f(CW\*(C`NOWRAP\*(C'\fR and \f(CW\*(C`COLOR\*(C'\fR.
+\&\f(CW\*(C`CPAN_IGNORE\*(C'\fR, \f(CW\*(C`ETC_PROFILE\*(C'\fR, \f(CW\*(C`LOG_DIR\*(C'\fR, \f(CW\*(C`NOWRAP\*(C'\fR, \f(CW\*(C`COLOR\*(C'\fR and \f(CW\*(C`SO_CHECK\*(C'\fR.
 .ie n .SS $download_time
 .el .SS \f(CW$download_time\fP
 .IX Subsection "$download_time"
@@ -199,6 +203,24 @@ Returns 1 if the file exists, and 0 otherwise.
 .PP
 \&\f(CWdangerous_directory()\fR takes a string and returns true if it is equal to \f(CW\*(C`/\*(C'\fR,
 \&\f(CW\*(C`/root\*(C'\fR, \f(CW\*(C`/home\*(C'\fR or a possible directory under \f(CW\*(C`/home\*(C'\fR.
+.SS decimalize
+.IX Subsection "decimalize"
+.Vb 1
+\&  my $decimal = decimalize($hex, $big_endian);
+.Ve
+.PP
+\&\f(CWdecimalize()\fR takes a hex string and an indicator of whether big\-endian calculation is to be
+used, returning a decimal string.
+.SS elf_links
+.IX Subsection "elf_links"
+.Vb 1
+\&  my ($elf_type, @cand_libs) = is_elf($file);
+.Ve
+.PP
+\&\f(CWelf_links()\fR takes a path and checks whether it is a dynamically\-linked ELF binary; it returns
+0 if not. Otherwise, it returns 1 for a 64\-bit ELF file, \-1 for a 32\-bit ELF file and an array of
+first\-order shared object dependencies that do not exist on the system under an \f(CW\*(C`rpath\*(C'\fR or
+\&\f(CW\*(C`runpath\*(C'\fR.
 .SS error_code
 .IX Subsection "error_code"
 .Vb 1
@@ -229,6 +251,9 @@ value.
 \&\f(CWget_arch()\fR returns the machine architechture as reported by \f(CW\*(C`uname
 \&\-m\*(C'\fR. For the \f(CW\*(C`x86_64\*(C'\fR architecture, additionally check whether \f(CW\*(C`/bin/bash\*(C'\fR
 is 64\- or 32\-bit to account for 32\-bit userlands running on a 64\-bit kernel.
+.PP
+\&\f(CW\*(C`get_arch\*(C'\fR is not exported; use the exported variable \f(CW$arch\fR if it is necessary
+to check for architecture.
 .SS get_colors
 .IX Subsection "get_colors"
 .Vb 1
@@ -596,6 +621,9 @@ The sbotools share the following exit codes:
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
 \&\fBSBO::Lib\fR\|(3), \fBSBO::Lib::Build\fR\|(3), \fBSBO::Lib::Download\fR\|(3), \fBSBO::Lib::Info\fR\|(3), \fBSBO::Lib::Pkgs\fR\|(3), \fBSBO::Lib::Readme\fR\|(3), \fBSBO::Lib::Repo\fR\|(3), \fBSBO::Lib::Tree\fR\|(3), \fBTerm::ANSIColor\fR\|(3)
+.PP
+\&\f(CW\*(C`https://refspecs.linuxbase.org/elf/gabi4+/\*(C'\fR is a helpful resource about the structure of
+ELF files.
 .SH AUTHORS
 .IX Header "AUTHORS"
 SBO::Lib was originally written by Jacob Pipkin <j@dawnrazor.net> with
