Man page fixes.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -105,10 +105,7 @@ version differences. To check for missing first-order shared object (solib) depe
 among all installed in-tree
 .I
 _SBo
-packages with
-.B
-readelf(1)\fR\
-\&, use the
+packages, use the
 .B
 --so-check
 option. Each affected package is logged to
@@ -349,7 +346,7 @@ None known. If found, Issues and Pull Requests to
 are always welcome.
 .SH SEE ALSO
 .P
-sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1), readelf(1)
+sboclean(1), sboconfig(1), sbofind(1), sbohints(1), sboinstall(1), sboremove(1), sboupgrade(1), sbotools.colors(5), sbotools.conf(5), sbotools.hints(5), gpg(1)
 .SH AUTHORS
 .P
 Jacob Pipkin <j@dawnrazor.net>
