--- a/man3/SBO::Lib::Pkgs.3
+++ b/man3/SBO::Lib::Pkgs.3
@@ -163,7 +163,7 @@ This subroutine is used only by \f(CWsbocheck(1)\fR.
 .Ve
 .PP
 \&\f(CWsolib_check()\fR takes the name of a package file and checks for the presence of any
-required first\-order shard object dependencies as based on the \f(CW@native_libs\fR shared
+required first\-order shared object dependencies as based on the \f(CW@native_libs\fR shared
 object array. It returns 1 if all required shared objects appear to be present and 0
 otherwise.
 .PP
