--- a/man3/SBO::Lib::Tree.3
+++ b/man3/SBO::Lib::Tree.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Tree 3"
-.TH SBO::Lib::Tree 3 "Prickle-Prickle, Confusion 43, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Tree 3 "Setting Orange, Confusion 64, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -127,8 +127,9 @@ if it is not.
 .IX Header "EXIT CODES"
 Tree.pm subroutines can return the following exit code:
 .PP
-.Vb 1
+.Vb 2
 \&  _ERR_SCRIPT        2   script or module bug
+\&  _ERR_OPENFH        6   failure to open file handles
 .Ve
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
