--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -250,7 +250,7 @@ to missing shared object dependencies (solibs). To check first-order
 dependencies for all installed
 .I
 SBo
-packages for missing shared object dependencies (solibs),
+packages,
 use
 .B
 sbocheck
