--- a/man3/SBO::Lib::Solibs.3
+++ b/man3/SBO::Lib::Solibs.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Solibs 3"
-.TH SBO::Lib::Solibs 3 "Setting Orange, Confusion 64, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Solibs 3 "Sweetmorn, Confusion 65, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -108,16 +108,26 @@ used, returning a decimal string.
 returns 0 if not. Otherwise, it reads entries according to the \fBelf\fR\|(5) specification and
 returns 1 for a 64\-bit ELF file, \-1 for a 32\-bit ELF file and an array of first\-order
 shared object dependencies that do not exist on the system under an \f(CW\*(C`rpath\*(C'\fR or \f(CW\*(C`runpath\*(C'\fR.
+.SS installed_solibs
+.IX Subsection "installed_solibs"
+.Vb 1
+\&  my @pkg_solibs = installed_solibs($pkg);
+.Ve
+.PP
+\&\f(CWinstalled_solibs()\fR takes the name of a package file. It returns an array of
+shared object names that are installed as files or symlinks, or 0 if none exist.
 .SS solib_check
 .IX Subsection "solib_check"
 .Vb 1
 \&  my $solibs_good = solib_check($pkg);
+\&
+\&  my $solibs_good = solib_check($pkg, @search);
 .Ve
 .PP
-\&\f(CWsolib_check()\fR takes the name of a package file and checks for the presence of any
-required first\-order shared object dependencies as based on the \f(CW@native_libs\fR shared
-object array. It returns 1 if all required shared objects appear to be present and 0
-otherwise.
+\&\f(CWsolib_check()\fR takes the name of a package file and, optionally, an array of shared
+object names to search, and checks for the presence of any required first\-order shared
+object dependencies as based on the \f(CW@native_libs\fR shared object array. It returns 1 if
+all required shared objects appear to be present and 0 otherwise.
 .PP
 Because \f(CWelf_links()\fR is called, performance is cache\-dependent. It is best to call
 \&\f(CWsolib_check()\fR judiciously.
