--- a/man3/SBO::Lib::Util.3
+++ b/man3/SBO::Lib::Util.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Util 3"
-.TH SBO::Lib::Util 3 "Setting Orange, Confusion 64, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Util 3 "Sweetmorn, Confusion 65, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -114,9 +114,9 @@ The supported keys are: \f(CW\*(C`NOCLEAN\*(C'\fR, \f(CW\*(C`DISTCLEAN\*(C'\fR, 
 .IX Subsection "$download_time"
 The time spent downloading source files. Unless \f(CW\*(C`CLASSIC\*(C'\fR is \f(CW"TRUE"\fR, it is
 displayed when all builds are complete.
-.ie n .SS $head_file
-.el .SS \f(CW$head_file\fP
-.IX Subsection "$head_file"
+.ie n .SS $hint_file
+.el .SS \f(CW$hint_file\fP
+.IX Subsection "$hint_file"
 A file, \f(CW\*(C`/etc/sbotools/sbotools.hints\*(C'\fR by default, containing blacklisted scripts,
 optional script dependencies and automatic revese dependency rebuild requests.
 .ie n .SS $is_sbotest
