Man page cleanup.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -186,6 +186,9 @@ with the
 --so-check\fR\
 \&,
 .B
+--check-package\fR\
+\&,
+.B
 --help
 and
 .B
@@ -299,6 +302,7 @@ sbotools.conf(5)\fR\
 .B
 --check-package\fR\
 \&.
+.RE
 .P
 .B
 -h|--help
