--- a/man1/sbofind.1
+++ b/man1/sbofind.1
@@ -21,7 +21,7 @@ sbofind
 searches the names of all available SlackBuilds for one or more
 search terms. It reports back any SlackBuilds found along
 with path, version and installation status information. This is
-equivalent to running
+akin to running
 .RS
 
 cd /usr/ports; make search name=$search_term display=name,path
@@ -186,8 +186,8 @@ can exit with the following codes:
 .RS
 1:  a usage error occured (e.g., incorrect options were passed to
 .B
-sbofind
-).
+sbofind\fR\
+\&).
 .RE
 .RS
 2:  a script or module error occurred.
