--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -260,7 +260,20 @@ with the
 option. Use
 .B
 -c
-instead to check a list of installed packages.
+instead to check a list of installed packages. Checks are performed automatically
+after running
+.B
+sbocheck
+and
+.B
+sboupgrade(1)
+when the
+.B
+SO_CHECK
+setting is
+.B
+TRUE\fR\
+\&.
 .SH BUGS
 .P
 None known. If found, Issues and Pull Requests to
