--- a/man3/SBO::Lib::Info.3
+++ b/man3/SBO::Lib::Info.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Info 3"
-.TH SBO::Lib::Info 3 "Setting Orange, Confusion 64, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Info 3 "Sweetmorn, Confusion 70, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -174,9 +174,10 @@ blank lines, garbage lines and missing quotation marks and backslashes.
 .IX Header "EXIT CODES"
 Info.pm subroutines can return the following exit codes:
 .PP
-.Vb 2
+.Vb 3
 \&  _ERR_USAGE         1   usage errors
 \&  _ERR_SCRIPT        2   script or module bug
+\&  _ERR_OPENFH        6   failure to open file handles
 .Ve
 .SH "SEE ALSO"
 .IX Header "SEE ALSO"
