--- a/man3/SBO::Lib::Repo.3
+++ b/man3/SBO::Lib::Repo.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Repo 3"
-.TH SBO::Lib::Repo 3 "Setting Orange, Confusion 64, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Repo 3 "Sweetmorn, Confusion 70, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -279,11 +279,12 @@ that the user can trust the key.
 .IX Header "EXIT CODES"
 Repo.pm subroutines can return the following exit codes:
 .PP
-.Vb 6
+.Vb 7
 \&  _ERR_USAGE         1   usage errors
 \&  _ERR_SCRIPT        2   script or module bug
 \&  _ERR_MD5SUM        4   md5sum verification failure
 \&  _ERR_DOWNLOAD      5   download failure
+\&  _ERR_OPENFH        6   failure to open file handles
 \&  _ERR_GPG           15  GPG verification failed
 \&  _ERR_STDIN         16  reading keyboard input failed
 .Ve
