--- a/man3/SBO::Lib::Solibs.3
+++ b/man3/SBO::Lib::Solibs.3
@@ -58,13 +58,13 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Solibs 3"
-.TH SBO::Lib::Solibs 3 "Sweetmorn, Confusion 65, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Solibs 3 "Sweetmorn, Confusion 70, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
 .nh
 .SH NAME
-SBO::Lib::Solibs \- Functions for evaluating ELF binaries
+SBO::Lib::Solibs \- Routines for evaluating ELF binaries
 .SH SYNOPSIS
 .IX Header "SYNOPSIS"
 .Vb 1
