sbocheck: No repo OK for -C and -c.

--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -221,7 +221,8 @@ Check every package on the system,
 .I
 _SBo
 or otherwise\fR\
-\&, for missing shared objects. Incompatible with
+\&, for missing shared objects. This option is usable even when there is no local
+copy of the repository. Incompatible with
 .B
 --so-check
 and
@@ -237,7 +238,8 @@ Check one or more package names for missing shared objects; the packages need no
 tagged with
 .I
 _SBo\fR\
-\&. Incompatible with
+\&. This option is usable even when there is no local copy of the repository.
+Incompatible with
 .B
 --so-check
 and
