--- a/man1/sbotools.1
+++ b/man1/sbotools.1
@@ -263,7 +263,13 @@ option. Use
 instead to check a list of installed packages, or
 .B
 -C
-to check all installed packages. Checks of
+to check all installed packages.
+.B
+-C
+and
+.B
+-c
+can be used without a local copy of the repository. Checks of
 .I
 _SBo
 packages only are performed automatically after running
