--- a/man1/sboconfig.1
+++ b/man1/sboconfig.1
@@ -15,7 +15,7 @@ sboconfig [-l|-n]
 .P
 sboconfig [--reset]
 .P
-sboconfig [-CKPORSXcbdegw TRUE|FALSE] [-j #|FALSE] [-Lpo /path|FALSE] \\
+sboconfig [-CKOPRSXcbdegw TRUE|FALSE] [-j #|FALSE] [-Lpo /path|FALSE] \\
           [-s /path|/usr/sbo] [-B branch_name|FALSE] [-V #.#|FALSE] \\
           [-r url|FALSE]
 .SH DESCRIPTION
@@ -164,7 +164,7 @@ CLASSIC\fR\
 TRUE\fR\
 \&, automatically enable
 .B
-RSYNC_DEFAULT\fR\
+RSYNC_DEFAULT
 and
 .B
 BUILD_IGNORE\fR\
