--- a/man5/sbotools.hints.5
+++ b/man5/sbotools.hints.5
@@ -11,7 +11,10 @@ sbotools
 The
 .I
 /etc/sbotools/sbotools.hints
-file is used to give sbotools hints about individual scripts. Three kinds of hints
+file is used to give
+.B
+sbotools
+hints about individual scripts. Three kinds of hints
 are recognized:
 .RS
 
