--- a/man1/sboupgrade.1
+++ b/man1/sboupgrade.1
@@ -143,7 +143,8 @@ sboupgrade\fR\
 \&. Each affected package is logged to
 .I
 /var/log/sboupgrade-solibs.log
-with a list of missing shared objects. This can be done automatically after every
+with a list of missing shared objects and the files that have first-order dependencies on
+them. This can be done automatically after every
 .B
 sboupgrade
 run by setting
