--- a/man3/SBO::Lib::Tree.3
+++ b/man3/SBO::Lib::Tree.3
@@ -58,7 +58,7 @@
 .\" ========================================================================
 .\"
 .IX Title "SBO::Lib::Tree 3"
-.TH SBO::Lib::Tree 3 "Setting Orange, Confusion 64, 3191 YOLD" "" "sbotools 3.7"
+.TH SBO::Lib::Tree 3 "Sweetmorn, Bureaucracy 7, 3191 YOLD" "" "sbotools 3.7"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -101,11 +101,9 @@ given \f(CW$sbo\fR.
 \&\f(CWget_sbo_location()\fR returns the location in \f(CW\*(C`LOCAL_OVERRIDES\*(C'\fR or the
 SlackBuilds.org tree for the first \f(CW$sbo\fR given.
 .PP
-Specifying more than one \f(CW$sbo\fR is useful only for accessing the
-filesystem once when searching or populating the internal cache. No
-code does this currently. If the subroutine is to be called sequentially
-on any substantial number of \f(CW$sbo\fR, calling \f(CWget_sbo_locations()\fR on
-them collectively first is advisable for performance reasons.
+If this subroutine is to be called sequentially on any substantial number
+of \f(CW$sbo\fR, calling \f(CWget_sbo_locations()\fR on them collectively first is
+advisable for performance reasons.
 .SS get_sbo_locations
 .IX Subsection "get_sbo_locations"
 .Vb 1
