--- a/man1/sboremove.1
+++ b/man1/sboremove.1
@@ -1,4 +1,4 @@
-.TH sboremove 1 "Setting Orange, Confusion 39, 3191 YOLD" "sbotools 3.7" sbotools
+.TH sboremove 1 "Sweetmorn, Bureaucracy 7, 3191 YOLD" "sbotools 3.8" sbotools
 .SH NAME
 .P
 .B
