--- a/man1/sbocheck.1
+++ b/man1/sbocheck.1
@@ -1,4 +1,4 @@
-.TH sbocheck 1 "Setting Orange, Confusion 39, 3191 YOLD" "sbotools 3.7" sbotools
+.TH sbocheck 1 "Sweetmorn, Bureaucracy 7, 3191 YOLD" "sbotools 3.8" sbotools
 .SH NAME
 .P
 .B
