--- a/man5/sbotools.colors.5
+++ b/man5/sbotools.colors.5
@@ -1,4 +1,4 @@
-.TH sbotools.colors 5 "Sweetmorn, Confusion 50, 3191 YOLD" "sbotools 3.7" sbotools
+.TH sbotools.colors 5 "Sweetmorn, Bureaucracy 7, 3191 YOLD" "sbotools 3.8" sbotools
 .SH NAME
 .P
 .B
